--- a/baoyu/style/style.css
+++ b/baoyu/style/style.css
@@ -73,7 +73,8 @@ h2 {
 }
 
 p {
-    font-size: 13pt;
+    font-size: 14pt;
+    line-height: 1.7;
 }
 
 p.small {
@@ -82,6 +83,7 @@ p.small {
 
 p.centre {
     text-align: center;
+    
 }
 
 x-centre {
