--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,10 @@ body {
     flex-direction: column;
 }
 
+p.small {
+    font-size: 10pt;
+}
+
 h1 {
     text-align: center;
     font-family: Manrope, sans-serif;
