--- a/shenhai/style/style.css
+++ b/shenhai/style/style.css
@@ -35,6 +35,7 @@ body {
     /* flex-direction: row-reverse; */
     font-size: 18pt;
     overflow-x: auto;
+    overflow-y: hidden;
 }
 
 /* #region c-box fundamentals */
@@ -42,7 +43,7 @@ body {
 c-box {
     display: block;
     writing-mode: vertical-rl;
-    height: 95vh;
+    height: calc(95vh - 0.5em);
     max-height: 36.2em;
     padding: 0.5em;
     flex-shrink: 0;
@@ -293,4 +294,27 @@ c-box header::after {
 }
 
 /* #endregion */
+
+.return-button {
+    position: fixed;
+    bottom: 1em;
+    left: 1em;
+    padding: 0.5em;
+    background: rgba(34, 34, 34, 0.2);
+    border: none;
+    border-radius: 0.2em;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14pt;
+    writing-mode: horizontal-tb;
+    transition: background 0.2s;
+    font-family: var(--body-font);
+}
+
+@media (max-width: 768px) {
+    .return-button {
+        bottom: unset;
+        top: calc(100vh - 4em);
+        left: 1em;
+    }
+}
 
