--- a/shenhai/style/style.css
+++ b/shenhai/style/style.css
@@ -252,6 +252,17 @@ span.tight {
     right: 0.2em
 }
 
+.juan .black {
+    background-color: var(--text);
+    color: var(--light-paper);
+    border-radius: 0.1em;
+    box-shadow: 0 -0.1em 0 0.1em var(--text);
+}
+
+.juan u {
+    text-decoration: underline solid var(--mutedred);
+}
+
 /* #endregion */
 
 /* #region flex juanku list items */
