--- a/shenhai/style/style.css
+++ b/shenhai/style/style.css
@@ -171,7 +171,8 @@ span.tight {
 .juan blockquote {
     margin: 0;
     line-height: 150%;
-    padding-top: 2.4em;
+    /* padding-top: 2.4em; */
+    padding-top: 1.2em;
     padding-left: 0.1em;
     background: repeating-linear-gradient(
         270deg,
