--- a/shenhai/style/style.css
+++ b/shenhai/style/style.css
@@ -289,6 +289,11 @@ span.tight {
     letter-spacing: 0.15em;
 }
 
+.juan span.inlay1 .speechmark, .juan span.inlay2 .speechmark {
+    margin-inline-start: -0.3em;
+    margin-inline-end: -0.3em;
+}
+
 .juan span.number {
     font-size: 15pt;
     display: inline;
