--- a/style/style.css
+++ b/style/style.css
@@ -2,12 +2,11 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap');
 
 body {
     background-color: #dddddd;
     color: #222222;
-    font-family: Manrope, 'Noto Serif TC', 'Noto Serif SC', sans-serif;
+    font-family: Manrope, 'Noto Serif SC', sans-serif;
     font-size: 12pt;
     /* display: flex; */
 }
