define global variables

--- a/src/styles/colour.scss
+++ b/src/styles/colour.scss
@@ -1,2 +1,8 @@
 $bg-standard: #ddd;
 $txt-standard: #222;
+$grey-mid: #aaa;
+$grey-high: #ccc;
+$main: #3a6342;
+$main-light: 348544;
+$page: #f1f2e9;
+$page-dark: #d8d8c3;
