--- a/src/styles/colour.scss
+++ b/src/styles/colour.scss
@@ -3,6 +3,7 @@ $txt-standard: #222;
 $grey-mid: #aaa;
 $grey-high: #ccc;
 $main: #3a6342;
-$main-light: 348544;
+$main-light: #348544;
+$main-shadow: #1f491f24;
 $page: #f1f2e9;
 $page-dark: #d8d8c3;
