more styling transfers

--- a/src/layouts/story/LandingPage.astro
+++ b/src/layouts/story/LandingPage.astro
@@ -9,6 +9,7 @@ const {frontmatter} = Astro.props;
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
+        <link rel="shortcut icon" href="/icon.png" type="image/png">
         <title>{frontmatter.title}</title>
     </head>
     <body>
