--- a/src/layouts/story/DgrLandingPage.astro
+++ b/src/layouts/story/DgrLandingPage.astro
@@ -1,6 +1,7 @@
 ---
 import LandingBox from "../../components/LandingBox.astro";
 import "../../styles/story/common.scss"
+import "../../styles/story/dagengren.scss"
 const {frontmatter} = Astro.props;
 ---
 
