--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -4,6 +4,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 $landing: 'Manrope', 'Noto Serif SC', sans-serif;
-$story-body: 'Lora', 'Noto Serif SC', serif;
+$story-body: 'Lora', 'Noto Serif SC', kinghwa.$kinghwa, serif;
 $story-header: 'Manrope', sans-serif;
 $classical: kinghwa.$kinghwa, 'Noto Serif SC', serif;
