attempt to load in legacy sites -- did not work

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,10 +32,10 @@ import "../styles/landingpage/style.scss"
 
 			<ul>
 				<li>
-					<a href="./baoyu/">暴雨中：In Torrential Rains</a> (一篇玄幻故事；进行中)
+					<a href="baoyu/">暴雨中：In Torrential Rains</a> (一篇玄幻故事；进行中)
 				</li>
 				<li>
-					<a href="./shenhai/"
+					<a href="shenhai/"
 						>神海大作集：Collections from the Celestial Sea</a
 					>（竖排繁体文言短篇小说）
 				</li>
@@ -45,7 +45,7 @@ import "../styles/landingpage/style.scss"
 
 			<ul>
 				<li>
-					<a href="./dagengren/"
+					<a href="dagengren/"
 						>大奉打更人：The Nightwatchers of Feng by 卖报小郞君</a
 					> (ongoing, English translation)
 				</li>
@@ -55,18 +55,18 @@ import "../styles/landingpage/style.scss"
 
 			<ul>
 				<li>
-					<a href="./fengshen/">封神演义【明】许仲林</a>（简）
+					<a href="fengshen/">封神演义【明】许仲林</a>（简）
 				</li>
 				<li>
-					<a href="./shiji/">史記三家注【漢】司馬遷</a>
+					<a href="shiji/">史記三家注【漢】司馬遷</a>
 				</li>
-				<li><a href="./shishuo/">師說【唐】韓愈</a></li>
+				<li><a href="shishuo/">師說【唐】韓愈</a></li>
 				<li>
-					<a href="./jimengyaojue/"
+					<a href="jimengyaojue/"
 						>擊蒙要訣【清】李珥；自《栗谷先生全書》</a>
 				</li>
 				<li>
-					<a href="./zhuangzijishi/"
+					<a href="/zhuangzijishi/"
 						>莊子集釋【清】郭慶藩（特殊排版）</a>
 				</li>
 			</ul>
