start building shenhai

--- a/src/styles/colour.scss
+++ b/src/styles/colour.scss
@@ -5,5 +5,8 @@ $grey-high: #ccc;
 $main: #3a6342;
 $main-light: #348544;
 $main-shadow: #1f491f24;
+$shenhai-shadow: #22222299;
 $page: #f1f2e9;
 $page-dark: #d8d8c3;
+$linework: #bda4a4;
+$red: #ba3333;
