--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -6,4 +6,4 @@
 $landing: 'Manrope', 'Noto Serif SC', sans-serif;
 $story-body: 'Lora', 'Noto Serif SC', kinghwa.$kinghwa, serif;
 $story-header: 'Manrope', sans-serif;
-$classical: kinghwa.$kinghwa, 'Noto Serif SC', serif;
+$classical: 'Lora', kinghwa.$kinghwa, 'Noto Serif SC', serif;
