--- a/src/styles/shenhai/global.scss
+++ b/src/styles/shenhai/global.scss
@@ -114,6 +114,10 @@ span.tight {
     letter-spacing: 2px;
 }
 
+span.book-title {
+    text-decoration: underline wavy colour.$red;
+}
+
 .blank {
     width: 1.5em
 }
