Fix wonky links

--- a/src/components/DgrChapters.astro
+++ b/src/components/DgrChapters.astro
@@ -45,7 +45,7 @@ const list = await Promise.all(
   {
     list.map(({ slug, title }) => (
       <li>
-        <a href={`/dagengren/story/${slug}`}>{title}</a>
+        <a href={`/dagengren/story/${slug}/`}>{title}</a>
       </li>
     ))
   }
