--- a/src/pages/fengshen/index.astro
+++ b/src/pages/fengshen/index.astro
@@ -23,7 +23,7 @@ const frontmatter = {
     <ul>
       {chapters.map(({ slug, data }) => (
         <li>
-          <a href={`./story/${slug}`}>
+          <a href={`./story/${slug}/`}>
             {data.displayTitle}
           </a>
         </li>
