--- a/src/pages/zhuangzijishi/index.astro
+++ b/src/pages/zhuangzijishi/index.astro
@@ -25,36 +25,36 @@ import "../../styles/zhuangzijishi/style.scss";
             <h2 id="目錄">目錄</h2>
 
             <ol>
-                <li><a href="./text/1">前言</a></li>
-                <li><a href="./text/2">莊子集釋序</a></li>
-                <li><a href="./text/3">莊子序</a></li>
-                <li><a href="./text/4">經典釋文序錄</a></li>
-                <li><a href="./text/5">莊子序</a></li>
-                <li><a href="./text/6">內篇逍遙遊第一</a></li>
-                <li><a href="./text/7">內篇齊物論第二</a></li>
-                <li><a href="./text/8">內篇養生主第三</a></li>
-                <li><a href="./text/9">內篇人間世第四</a></li>
-                <li><a href="./text/10">內篇德充符第五</a></li>
-                <li><a href="./text/11">內篇大宗師第六</a></li>
-                <li><a href="./text/12">內篇應帝王第七</a></li>
-                <li><a href="./text/13">外篇駢拇第八</a></li>
-                <li><a href="./text/14">外篇馬蹄第九</a></li>
-                <li><a href="./text/15">外篇在宥第十一</a></li>
-                <li><a href="./text/16">外篇天地第十二</a></li>
-                <li><a href="./text/17">外篇天道第十三</a></li>
-                <li><a href="./text/18">外篇天運第十四</a></li>
-                <li><a href="./text/19">外篇刻意第十五</a></li>
-                <li><a href="./text/20">外篇秋水第十七</a></li>
-                <li><a href="./text/21">外篇達生第十九</a></li>
-                <li><a href="./text/22">外篇田子方第二十一</a></li>
-                <li><a href="./text/23">雜篇庚桑楚第二十三</a></li>
-                <li><a href="./text/24">雜篇徐無鬼第二十四</a></li>
-                <li><a href="./text/25">雜篇則陽第二十五</a></li>
-                <li><a href="./text/26">雜篇外物第二十六</a></li>
-                <li><a href="./text/27">雜篇讓王第二十八</a></li>
-                <li><a href="./text/28">雜篇說劍第三十</a></li>
-                <li><a href="./text/29">雜篇天下第三十三</a></li>
-                <li><a href="./text/30">點校後記</a></li>
+                <li><a href="./text/1/">前言</a></li>
+                <li><a href="./text/2/">莊子集釋序</a></li>
+                <li><a href="./text/3/">莊子序</a></li>
+                <li><a href="./text/4/">經典釋文序錄</a></li>
+                <li><a href="./text/5/">莊子序</a></li>
+                <li><a href="./text/6/">內篇逍遙遊第一</a></li>
+                <li><a href="./text/7/">內篇齊物論第二</a></li>
+                <li><a href="./text/8/">內篇養生主第三</a></li>
+                <li><a href="./text/9/">內篇人間世第四</a></li>
+                <li><a href="./text/10/">內篇德充符第五</a></li>
+                <li><a href="./text/11/">內篇大宗師第六</a></li>
+                <li><a href="./text/12/">內篇應帝王第七</a></li>
+                <li><a href="./text/13/">外篇駢拇第八</a></li>
+                <li><a href="./text/14/">外篇馬蹄第九</a></li>
+                <li><a href="./text/15/">外篇在宥第十一</a></li>
+                <li><a href="./text/16/">外篇天地第十二</a></li>
+                <li><a href="./text/17/">外篇天道第十三</a></li>
+                <li><a href="./text/18/">外篇天運第十四</a></li>
+                <li><a href="./text/19/">外篇刻意第十五</a></li>
+                <li><a href="./text/20/">外篇秋水第十七</a></li>
+                <li><a href="./text/21/">外篇達生第十九</a></li>
+                <li><a href="./text/22/">外篇田子方第二十一</a></li>
+                <li><a href="./text/23/">雜篇庚桑楚第二十三</a></li>
+                <li><a href="./text/24/">雜篇徐無鬼第二十四</a></li>
+                <li><a href="./text/25/">雜篇則陽第二十五</a></li>
+                <li><a href="./text/26/">雜篇外物第二十六</a></li>
+                <li><a href="./text/27/">雜篇讓王第二十八</a></li>
+                <li><a href="./text/28/">雜篇說劍第三十</a></li>
+                <li><a href="./text/29/">雜篇天下第三十三</a></li>
+                <li><a href="./text/30/">點校後記</a></li>
             </ol>
         </div>
     </body>
