--- a/src/components/BaoyuChapters.astro
+++ b/src/components/BaoyuChapters.astro
@@ -45,7 +45,7 @@ const list = await Promise.all(
   {
     list.map(({ slug, title }) => (
       <li>
-        <a href={`/baoyu/story/${slug}`}>【{title}】</a>
+        <a href={`/baoyu/story/${slug}/`}>【{title}】</a>
       </li>
     ))
   }
