--- a/src/pages/fengshen/story/[slug].astro
+++ b/src/pages/fengshen/story/[slug].astro
@@ -32,16 +32,16 @@ const { Content } = await entry.render();
 <BookChapter frontmatter={frontmatter}>
   <ShList>
     <div>
-      <a href="../">反主页</a>
+      <a href="../../">反主页</a>
     </div>
     {prev && (
         <div>
-            <a href={`./${prev.slug}`}>上一章</a>
+            <a href={`../${prev.slug}/`}>上一章</a>
         </div>
     )}
     {next && (
     <div>
-        <a href={`./${next.slug}`}>下一章</a>
+        <a href={`../${next.slug}/`}>下一章</a>
     </div>
     )}
   </ShList>
