--- a/src/pages/shiji/index.astro
+++ b/src/pages/shiji/index.astro
@@ -25,7 +25,7 @@ const frontmatter = {
     <ul>
       {chapters.map(({ slug, data }) => (
         <li>
-          <a href={`./chapter/${slug}`}>
+          <a href={`./chapter/${slug}/`}>
             {data.displayTitle}
           </a>
         </li>
